--- a/templates/index.html
+++ b/templates/index.html
@@ -58,14 +58,17 @@
 	<div id="myModal" class="modal fade" role="dialog">
 	  <div class="modal-dialog">
 
-	    <!-- Modal content-->
+ 	 <!-- Modal content-->
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal">&times;</button>
 	        <h4 class="modal-title">Loading Data</h4>
 	      </div>
 	      <div class="modal-body">
-	        <p>Please wait while your CSV file is processed.</p>
+	        <p>Does your file contain headers?</p>
+	         <button type="button" class="btn btn-info btn-lg" onclick="setHeaderValue(value=true)">Yes</button>
+	        <button type="button" class="btn btn-info btn-lg" onclick="setHeaderValue(value=false)">No</button>
+
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
