--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Visually</title>
-<link href="css/main.css" rel="stylesheet" />
-<link rel="stylesheet" href="css/dropzone.css">
+<link href="../css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="javascript/main.js" charset="utf-8"></script>
+<script src="../javascript/d3.min.js" charset="utf-8"></script>
+<script src="../javascript/main.js" charset="utf-8"></script>
+<script src="../javascript/papaparse.min.js" charset="utf-8"></script>
 
 
 
